--- a/todo.txt
+++ b/todo.txt
@@ -18,6 +18,9 @@
             - Figure out which head to use
                 - Raccoon?
         - Cache lot images instead of new fetch each time?
+        - Recreate sidebar as bar on top of page
+            - Sidebar can remain as a sim finder info panel
+                - Contains updates
 
     Low Priority TODO:
         - Some functions are still out of place (constant refactor)
