- cache bust to v0.2.2e

--- a/todo.txt
+++ b/todo.txt
@@ -10,7 +10,7 @@
         - Sim dates still slightly incorrect
             - Possibly timezone related
         
-    v0.2.2d TODO:
+    v0.2.2e TODO:
         - Better meta tag image
         - Special sim-head for mod accounts (M.O.M.I, D.A.D.D.I, etc)
             - Figure out which head to use
