--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
         - Offline sim data now cached on first fetch instead of being fetched every time a single offline sim is revisited
         - Fixed townhall mayors not being listed
         - New custom style key for random styles
+        - Moved sims clock and active jobs to new panel
 
     Bugs:
         - Sim dates still slightly incorrect
@@ -12,9 +13,6 @@
         
     v0.2.3a TODO:
         - Fix DOM element leak
-        - Recreate sidebar as bar on top of page
-            - Sidebar can remain as a sim finder info panel
-                - Contains updates
 
     Low Priority TODO:
         - Special sim-head for mod accounts (M.O.M.I, D.A.D.D.I, etc)
