--- a/todo.txt
+++ b/todo.txt
@@ -14,6 +14,8 @@
             - Possibly timezone related
         
     v0.2.3a TODO:
+        - Center clock bar
+            - Make it look less awkward
 
     Low Priority TODO:
         - Some functions are still out of place (constant refactor)
