--- a/todo.txt
+++ b/todo.txt
@@ -1,85 +1,115 @@
-- Rewrite TODO:
+Sim Finder Notes
 
-    Patchnotes v0.2.3a:
-        - Roommates data cached on first fetch instead of being fetched every time lot is viewed
-        - Offline sim data now cached on first fetch instead of being fetched every time a single offline sim is revisited
-        - Fixed townhall mayors not being listed
-        - New custom style key for random styles
-        - New candy cane block style for december
-        - Moved sims clock and active jobs to new panel
-        - Head decoration for known staff sims
+Patchnotes v0.2.3a:
+    - Roommates data cached on first fetch instead of being fetched every time lot is viewed
+    - Offline sim data now cached on first fetch instead of being fetched every time a single offline sim is revisited
+    - Fixed townhall mayors not being listed
+    - New custom style key for random styles
+    - New candy cane block style for december
+    - Moved sims clock and active jobs out of sidebar and onto page body
+    - Head decoration for known staff sims
+    
+Bugs:
+    - Sim dates still slightly incorrect
+        - Possibly timezone related
+    
+v0.2.3a TODO:
+    - Center clock bar
+        - Make it look less awkward
 
-    Bugs:
-        - Sim dates still slightly incorrect
-            - Possibly timezone related
-        
-    v0.2.3a TODO:
-        - Center clock bar
-            - Make it look less awkward
+Low Priority TODO:
+    - Some functions are still out of place (constant refactor)
+        - Move all GUI/writing functions to GUI etc
+    - Clean up css (constant refactor)
+        - Many scrambled and unused classes
+    - Change "idList" to "simfinder-bookmarks" in localStorage
+    - Make easier to use on mobile
+        - Layout is very large, could be much smaller
 
-    Low Priority TODO:
-        - Some functions are still out of place (constant refactor)
-            - Move all GUI/writing functions to GUI etc
-        - Clean up css (constant refactor)
-            - Many scrambled and unused classes
-        - Change "idList" to "simfinder-bookmarks" in localStorage
-        - Make easier to use on mobile
-            - Layout is very large, could be much smaller
-
-    Shelved Ideas:
-        - Remove (Maybe Hosting) if all sims accounted for
-            - Create possibility tree and figure this out
-            - Since I've removed the privacy state from the sim panel, it might be better to keep it
-
-    Paid Feature Ideas:
+Paid Features:
+    - Todo:
         - Query mods about paid features
+            - Paid with ingame currency (simoleons), no real money involved
+        - Create simple database to keep track of avatar ids of paying sims
+
+    - Plans:
+
+        - Plan Structure
+            - Sim ID Plan Permissions
+                - Permission to use plans is based on user request
+                - Any number of all three of an account's sims can be added to the database
+                - Does not garuntee any new sim created under the account will work, updating database is up to the paying user to request
+            - Tier-upgrading:
+                - Tiers can be upgraded to any higher tier, payment is equal to the difference between both tiers
+            - Permission inheritance
+                - Each tier assumes the perks from all previous tiers
+
+        - Plans
+            - Silver:
+                - $10k
+                - Custom colors
+            - Gold:
+                - $50k
+                - Animated colors
+                - Panel image library
+            - Diamond:
+                - $100k
+                - Add a unique panel image for paying sim at user request
+
+        - Single purchases:
+            - Add custom panel image to library
+                - $50k
+            - Add new color style (panel, label, inset)
+                - Style enters publicly usable styles
+                - $25k
+
+    - Feature Ideas:
+        - Symbol on profile denoting which tier they are
         - Animated colors for all elements
         - Custom style panel images
-            - Paid feature (check with mods)
+            - Image library + submitted by user request
         - Support for custom style colors
             - Use 3 character hex
             - Limit inside color range (#222 - #ddd)
                 - Text color is either sim-yellow or grey, depending on averaged custom color whiteness
 
-    Possible Features
-        - Save rolling average of data saved in localstorage to pull from later
-            - May not be most accurate but is at least something
-            - Possible uses:
-                - Last seen online
-        
-    Rolling Storage TODO:
+Possible Features:
+    - Save rolling average of data saved in localstorage to pull from later
+        - May not be most accurate but is at least something
         - Save structure
             - Sim ID
             - Time last online
-            - Log locations
-                - In future, can show graph of msot common landing spots
-            
-    Side Features:
-        - Lot renderer/object finder
-        - Music box creator
-        - Improved roof art generator
-        - DJ helper
+            - Log location
+    
+Side Features:
+    - Lot renderer/object finder
+    - Music box creator
+    - Improved roof art generator
+    - DJ helper
 
-short sim list
-https://api.freeso.org/userapi/avatars/online
+Shelved Ideas:
+    - Remove (Maybe Hosting) if all sims accounted for
+        - Create possibility tree and figure this out
+        - Since I've removed the privacy state from the sim panel, it might be better to keep it
 
-long sim list
-https://api.freeso.org/userapi/avatars?ids=887,30363 etc.
+API Link References:
+    - All online sim data
+        - https://api.freeso.org/userapi/avatars/online
 
-short lot list
-https://api.freeso.org/userapi/city/1/lots/online
+    - All online lot data
+        - https://api.freeso.org/userapi/city/1/lots/online
 
-long single-lot list (lot id)
-https://api.freeso.org/userapi/lots/6852
+    - Cached offline sim data (using avatar id)
+        - https://api.freeso.org/userapi/avatars?ids=887,30363 etc.
 
-lot thumbnail (location)
-https://api.freeso.org/userapi/city/1/13828398.png
+    - Cached offline sim data (using sim name)
+        - https://api.freeso.org/userapi/city/1/avatars/name/burglar%20cop
 
-search by sim name
-https://api.freeso.org/userapi/city/1/avatars/name/burglar%20cop
+    - Return single cached offline lot data (using lot id)
+        - https://api.freeso.org/userapi/lots/6852
 
-search by lot name
-https://api.freeso.org/userapi/city/1/lots/name/M.O.M.I.%20Headquarters
+    - Cached offline lot data (using lot name)
+        - https://api.freeso.org/userapi/city/1/lots/name/M.O.M.I.%20Headquarters
 
-return obj of top lots
-https://api.freeso.org/userapi/city/1/lots/top100/all
+    - Lot thumbnail (using lot location)
+        - https://api.freeso.org/userapi/city/1/13828398.png
