--- a/todo.txt
+++ b/todo.txt
@@ -14,6 +14,7 @@ Bugs:
         - Possibly timezone related
     
 v0.2.3a TODO:
+    - Confetti animation for birthday sims
     - Move staff lookup list to separate repo
         - So updating staff list won't require a push to master
     - Add staff + birthday emojis to bookmark list
