--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,7 @@ Bugs:
     - Confetti animation is odd when spamming
     
 v0.2.4 TODO:
+    - Show count of how many sims are at the same job lot (out-of-range locations still match up)
     - Paid features
         - See Notes below
     - Style editor
