--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,9 @@ Patchnotes v0.2.3c:
     - Added fun confetti effects for special occasions
     - (Hopefully) fixed some weird bug with birthdays
     
+Patchnotes v0.2.4a:
+    - Fixed false positive in staff detection
+
 Bugs:
     - Confetti animation is odd when spamming
     
