--- a/todo.txt
+++ b/todo.txt
@@ -14,17 +14,14 @@ Patchnotes v0.2.3c:
 Patchnotes v0.2.4a:
     - Fixed false positive in staff detection
     - Fix name panel clipboard copy also copying emojis
+    - Fixed darkmode button rendering below elements
 
 Bugs:
     - Confetti animation is odd when spamming
     
 v0.2.4 TODO:
-    - Fix label click-copy retaining emoji
-    - Darkmode toggle renders below panel titles
     - Add roommate bonus to market watch (from top lots api page)
     - Show count of how many sims are at the same job lot (out-of-range locations still match up)
-    - Paid features
-        - See Notes below
     - Style editor
         - Either in-site or a new repo
         - GUI editor for custom styles
