--- a/todo.txt
+++ b/todo.txt
@@ -32,6 +32,7 @@ v0.2.4 TODO:
     - New colors:
         - Royal purple (felt texture?)
         - Something special for New Years (stars?)
+        - Darker blue
     - Move wiki pictures to sim-finder-data repo
     - Move custom styles to sim-finder-data repo
 
