- removed a lot of now unused code

--- a/todo.txt
+++ b/todo.txt
@@ -1,29 +1,6 @@
 Sim Finder Notes
 
-Shutdown TODO:
-- Short quote:
-"FreeSO has been shutdown after nearly 8 years of operation.
-I will never forget the time I've spent in Sunrise Crater, and all of the sims that made it such a fun place to be.
-Though there's not much left to see, I've left your bookmarks list, and the sim search. Browse to your heart's content.
-- Reaganomics Lamborghini"
-
-Patchnotes v0.2.4a:
-    - Roommates data cached on first fetch instead of being fetched every time lot is viewed
-    - Offline sim data now cached on first fetch instead of being fetched every time a single offline sim is revisited
-    - Fixed townhall mayors not being listed
-    - New custom style key for random styles
-    - New candy cane block style for december
-    - Moved sims clock and active jobs out of sidebar and onto page body
-    - Head decoration for known staff sims
-    - Added fun confetti effects for special occasions
-    - (Hopefully) fixed some weird bug with birthdays
-    
-Patchnotes v0.2.4a:
-    - Fixed false positive in staff detection
-    - Fix name panel clipboard copy also copying emojis
-    - Fixed darkmode button rendering below elements
-
-Bugs:
+Known Bugs:
     - Confetti animation is odd when spamming
     
 v0.2.4 TODO:
@@ -38,7 +15,6 @@ v0.2.4 TODO:
     - Refactor "CleanLink" function
     - New colors:
         - Royal purple (felt texture?)
-        - Something special for New Years (stars?)
         - Darker blue
         - Black
     - Move wiki pictures to sim-finder-data repo
@@ -57,92 +33,3 @@ Low Priority TODO:
     - Change "idList" to "simfinder-bookmarks" in localStorage
     - Make easier to use on mobile
         - Layout is very large, could be much smaller
-
-Paid Features:
-    - Todo:
-        - Query mods about paid features
-            - Paid with ingame currency (simoleons), no real money involved
-        - Create simple database to keep track of avatar ids of paying sims
-
-    - Plans:
-        - Plan Structure
-            - Sim ID Plan Permissions
-                - Permission to use plans is based on user request
-                - Any number of all three of an account's sims can be added to the database
-                - Does not garuntee any new sim created under the account will work, updating database is up to the paying user to request
-            - Tier-upgrading:
-                - Tiers can be upgraded to any higher tier, payment is equal to the difference between both tiers
-            - Permission inheritance
-                - Each tier assumes the perks from all previous tiers
-
-        - Plans
-            - Silver:
-                - $10k
-                - Custom colors
-            - Gold:
-                - $50k
-                - Animated colors
-                - Panel image library
-            - Diamond:
-                - $100k
-                - Add a unique panel image for paying sim at user request
-
-        - Single purchases:
-            - Add custom panel image to library
-                - $50k
-            - Add new color style (panel, label, inset)
-                - Style enters publicly usable styles
-                - $25k
-
-    - Feature Ideas:
-        - Custom confetti sprites
-        - Custom sim head (on request)
-        - Symbol on profile denoting which tier they are
-        - Animated colors for all elements
-        - Custom style panel images
-            - Image library + submitted by user request
-        - Support for custom style colors
-            - Use 3 character hex
-            - Limit inside color range (#222 - #ddd)
-                - Text color is either sim-yellow or grey, depending on averaged custom color whiteness
-
-Possible Features:
-    - Save rolling average of data saved in localstorage to pull from later
-        - May not be most accurate but is at least something
-        - Save structure
-            - Sim ID
-            - Time last online
-            - Log location
-    
-Side Features:
-    - Lot renderer/object finder
-    - Music box creator
-    - Improved roof art generator
-    - DJ helper
-
-Shelved Ideas:
-    - Remove (Maybe Hosting) if all sims accounted for
-        - Create possibility tree and figure this out
-        - Since I've removed the privacy state from the sim panel, it might be better to keep it
-
-API Link References:
-    - All online sim data
-        - https://api.freeso.org/userapi/avatars/online
-
-    - All online lot data
-        - https://api.freeso.org/userapi/city/1/lots/online
-
-    - Cached offline sim data (using avatar id)
-        - https://api.freeso.org/userapi/avatars?ids=887,30363 etc.
-
-    - Cached offline sim data (using sim name)
-        - https://api.freeso.org/userapi/city/1/avatars/name/burglar%20cop
-
-    - Return single cached offline lot data (using lot id)
-        - https://api.freeso.org/userapi/lots/6852
-
-    - Cached offline lot data (using lot name)
-        - https://api.freeso.org/userapi/city/1/lots/name/M.O.M.I.%20Headquarters
-
-    - Lot thumbnail (using lot location)
-        - https://api.freeso.org/userapi/city/1/13828398.png
